--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   transition: all;
-  transition-duration: 2s;
+  transition-duration: 0.1s;
 }
 
 :root {
@@ -129,10 +129,6 @@ button:hover {
   box-shadow: 5px 5px 5px black;
 }
 
-.shadow {
-  box-shadow: 5px 5px 5px black;
-}
-
 .cellx {
   display: hidden;
   aspect-ratio: 1/1;
@@ -176,4 +172,10 @@ button:hover {
 .retry_image {
   height: 100%;
   width: 100%;
+}
+
+.cell_hover {
+  box-shadow: 5px 5px 5px black;
+  transform: scale(1.1);
+  border: 5px solid white;
 }
